<resources>
    <string name="app_name">RehabilitationTool</string>

    <string name="button4">Button</string>
    <string name="title_activity_clothes">CLOTHES</string>


    <string name="shirt">Shirt</string>


    <string name="name">Canda</string>
    <string name="image_view">TODO</string>
    <string name="time">الوقت</string>
    <string name="eattt">أكل</string>
    <string name="wearr">ألبس</string>

    <string name="goo">أمشي</string>
    <string name="transportation">المواصلات</string>
    <string name="tools">أدوات</string>
    <string name="createcard">انشاء بطاقة</string>
    <string name="iwantt">أنا عايز</string>
    <string name="yess">نعم</string>
    <string name="actionss">الأفعال</string>
    <string name="noo">لا</string>
    <string name="drinkk">أشرب</string>
    <string name="eatt">أكل</string>
    <string name="waerr">ألبس</string>
    <string name="toolss">الأدوات</string>
    <string name="relationss">الاتجاهات</string>
    <string name="transportationn">المواصلات</string>
    <string name="familyy">العائلة</string>
    <string name="notwantt">notwantt</string>
    <string name="notwanttt">أنا مش عايز</string>

    <string name="night2">الليل</string>
    <string name="morning2">الصبح</string>
    <string name="lettuce2">خس</string>
    <string name="carrot2">جزر</string>
    <string name="cucumber2">خيار</string>
    <string name="tomato2">طماطم</string>
    <string name="potato2">بطاطس</string>
    <string name="plane2">طيارة</string>
    <string name="ship2">سفينة</string>
    <string name="train2">قطار</string>
    <string name="car2">عربية</string>
    <string name="taxi2">تاكسي</string>
    <string name="metro2">مترو</string>
    <string name="autobus2">أوتوبيس</string>
    <string name="livingroom2">الصالة</string>
    <string name="bedroom2">اوضة النوم</string>
    <string name="supermarket2">السوبرماركت</string>
    <string name="company2">الشركة</string>
    <string name="university2">الجامعة</string>
    <string name="school2">المدرسة</string>
    <string name="bathroom2">الحمام</string>
    <string name="kitchen2">المطبخ</string>
    <string name="fork2">شوكة</string>
    <string name="spoon2">ملعقة</string>
    <string name="cup2">كوباية</string>
    <string name="dish2">طبق</string>
    <string name="table2">ترابيزة</string>
    <string name="chair2">كرسي</string>
    <string name="scussors2">مقص</string>
    <string name="knife2">سكينة</string>
    <string name="tv2">تليفزيون</string>
    <string name="notebook22">كراسة</string>
    <string name="toys2">ألعاب</string>
    <string name="ball2">كورة</string>
    <string name="computer2">كمبيوتر</string>
    <string name="pen2">قلم</string>
    <string name="glasses2">نضارة</string>
    <string name="bike2">عجلة</string>
    <string name="milk2">لبن</string>
    <string name="water2">ماء</string>
    <string name="juice2">عصير</string>
    <string name="orange2">برتقال</string>
    <string name="grape2">عنب</string>
    <string name="pear2">كمثرى</string>
    <string name="guava2">جوافة</string>
    <string name="Strawberries2">فراولة</string>
    <string name="mango2">مانجو</string>
    <string name="banana2">موز</string>
    <string name="peach2">خوخ</string>
    <string name="watermelon2">بطيخ</string>
    <string name="apple2">تفاح</string>
    <string name="soup2">شوربة</string>
    <string name="jam2">مربى</string>
    <string name="pizza2">بيتزا</string>
    <string name="icecream2">أيس كريم</string>
    <string name="bread2">عيش</string>
    <string name="fruit2">فاكهة</string>
    <string name="Chocolate2">شيكولاتة</string>
    <string name="meat2">لحمة</string>
    <string name="honey2">عسل</string>
    <string name="popcorn2">فشار</string>
    <string name="Yogurt2">زبادى</string>
    <string name="chickens2">فراخ</string>
    <string name="cheese2">جبنة</string>
    <string name="sandwich2">سندوتش</string>
    <string name="salad2">سلطة</string>
    <string name="biscuit2">بسكويت</string>
    <string name="fish2">سمك</string>
    <string name="rice2">رز</string>
    <string name="egg2">بيض</string>
    <string name="vegatable2">خضار</string>
    <string name="pajama2">بيجامة</string>
    <string name="blouse2">بلوزة</string>
    <string name="trousers2">بنطلون</string>
    <string name="jacket2">جاكيت</string>
    <string name="dress2">فستان</string>
    <string name="sock2">شراب</string>
    <string name="tshirt2">تيشيرت</string>
    <string name="shoes2">جزمة</string>
    <string name="skrit2">جيبة</string>
    <string name="suit2">بدلة</string>
    <string name="sister2">أختى</string>
    <string name="brother2">أخويا</string>
    <string name="father2">بابا</string>
    <string name="grandfather2">جدو</string>
    <string name="grandmother2">جدتى</string>
    <string name="mother2">ماما</string>
    <string name="around2">حول</string>
    <string name="beside2">بجانب</string>
    <string name="below2">تحت</string>
    <string name="above2">فوق</string>
    <string name="left2">شمال</string>
    <string name="right2">يمين</string>
    <string name="inside2">داخل</string>
    <string name="between2">بين</string>
    <string name="dance2">أرقص</string>
    <string name="ride2">أركب</string>
    <string name="sleep2">أنام</string>
    <string name="sing2">أغنى</string>
    <string name="close2">أقفل</string>
    <string name="swim2">أعوم</string>
    <string name="think2">أفكر</string>
    <string name="hop2">أقفز</string>
    <string name="read2">أقرأ</string>
    <string name="throw2">أرمى</string>
    <string name="watch2">اشاهد</string>
    <string name="smile2">ابتسم</string>
    <string name="climb2">اتسلق</string>
    <string name="speak2">اتكلم</string>
    <string name="run2">أجرى</string>
    <string name="gooo">اروح</string>
    <string name="smile">TODO</string>
    <string name="sleep">TODO</string>
    <string name="close">TODO</string>
    <string name="hop">TODO</string>
    <string name="read">TODO</string>
    <string name="think">TODO</string>
    <string name="sing">TODO</string>
    <string name="swim">TODO</string>
    <string name="watch">TODO</string>
    <string name="throw3">TODO</string>
    <string name="ride">TODO</string>
    <string name="dance">TODO</string>
    <string name="run">TODO</string>
    <string name="speak">TODO</string>
    <string name="climb">TODO</string>
    <string name="sock">TODO</string>
    <string name="shoes">TODO</string>
    <string name="jacket">TODO</string>
    <string name="dress">TODO</string>
    <string name="suit">TODO</string>
    <string name="skirt">TODO</string>
    <string name="tshirt">TODO</string>
    <string name="pajama">TODO</string>
    <string name="trousers">TODO</string>
    <string name="blouse">TODO</string>
    <string name="lettuce">TODO</string>
    <string name="potato">TODO</string>
    <string name="carrot">TODO</string>
    <string name="cucumb2">TODO</string>
    <string name="tomato">TODO</string>
    <string name="autobus">TODO</string>
    <string name="bike">TODO</string>
    <string name="plane">TODO</string>
    <string name="ship">TODO</string>
    <string name="train">TODO</string>
    <string name="metro">TODO</string>
    <string name="car">TODO</string>
    <string name="taxi">TODO</string>
    <string name="computerr">TODO</string>
    <string name="glassess">TODO</string>
    <string name="penn">TODO</string>
    <string name="ball">TODO</string>
    <string name="toyss">TODO</string>
    <string name="tvv">TODO</string>
    <string name="notebookk">TODO</string>
    <string name="chairr">TODO</string>
    <string name="tablee">TODO</string>
    <string name="scissorss">TODO</string>
    <string name="knifee">TODO</string>
    <string name="forkk">TODO</string>
    <string name="spoonn">TODO</string>
    <string name="cupp">TODO</string>
    <string name="dishh">TODO</string>
    <string name="livingroom">TODO</string>
    <string name="bedroom">TODO</string>
    <string name="supermarket">TODO</string>
    <string name="company">TODO</string>
    <string name="university">TODO</string>
    <string name="school">TODO</string>
    <string name="bathroom">TODO</string>
    <string name="kitchen">TODO</string>
    <string name="night">TODO</string>
    <string name="morning">TODO</string>
    <string name="left">TODO</string>
    <string name="right">TODO</string>
    <string name="inside">TODO</string>
    <string name="between">TODO</string>
    <string name="around">TODO</string>
    <string name="beside">TODO</string>
    <string name="below">TODO</string>
    <string name="above">TODO</string>
    <string name="milk">TODO</string>
    <string name="water">TODO</string>
    <string name="juice">TODO</string>
    <string name="grandfather">TODO</string>
    <string name="grandmother">TODO</string>
    <string name="mother">TODO</string>
    <string name="father">TODO</string>
    <string name="brother">TODO</string>
    <string name="sister">TODO</string>
    <string name="want">TODO</string>
    <string name="trans">TODO</string>
    <string name="relations">TODO</string>
    <string name="createcardd">TODO</string>
    <string name="tools2">TODO</string>
    <string name="create">Create Card</string>
    <string name="actions">TODO</string>
    <string name="timee">TODO</string>
    <string name="family">TODO</string>
    <string name="go">TODO</string>
    <string name="wear">TODO</string>
    <string name="drink">TODO</string>
    <string name="eat">TODO</string>
    <string name="no">TODO</string>
    <string name="yes">TODO</string>
    <string name="notWant">TODO</string>
    <string name="banana">TODO</string>
    <string name="mango">TODO</string>
    <string name="pear">TODO</string>
    <string name="Strawberries">TODO</string>
    <string name="grape">TODO</string>
    <string name="peach">TODO</string>
    <string name="guava">TODO</string>
    <string name="apple">TODO</string>
    <string name="watermelon">TODO</string>
    <string name="orange">TODO</string>
    <string name="jam">TODO</string>
    <string name="salad">TODO</string>
    <string name="meat">TODO</string>
    <string name="popcorn">TODO</string>
    <string name="chickens">TODO</string>
    <string name="bread">TODO</string>
    <string name="honey">TODO</string>
    <string name="Chocolate">TODO</string>
    <string name="fish">TODO</string>
    <string name="soup">TODO</string>
    <string name="sandwich">TODO</string>
    <string name="fruit">TODO</string>
    <string name="Yogurt">TODO</string>
    <string name="rice">TODO</string>
    <string name="cheese">TODO</string>
    <string name="egg">TODO</string>
    <string name="biscuit">TODO</string>
    <string name="pizza">TODO</string>
    <string name="icecream">TODO</string>
    <string name="vegatable">TODO</string>
    <string name="remove">TODO</string>
    <string name="choosephoto">اختيار صورة</string>
    <string name="imageView2">TODO</string>
    <string name="imageView3">TODO</string>
    <string name="imageView">TODO</string>
    <string name="PICK">PICK IMAGE</string>
    <string name="DB">ADD TO DB</string>
    <string name="imageProf">TODO</string>
    <string name="imgView">TODO</string>
    <string name="save">حفظ</string>
    <string name="txt1">الاسم</string>
    <string name="textView4">التقط صورة</string>
    <string name="textView3">اختر صورة</string>
    <string name="takephoto">TODO</string>
    <string name="pic">TODO</string>
    <string name="tvView">TODO</string>
    <string name="display">عرض البطاقات</string>
    <string name="imageViewImage">TODO</string>
    <string name="textView5">ضع اسمًا للبطاقة</string>
    <string name="textView2">ضع صوتًا للبطاقة</string>
    <string name="textView">ضع صورة البطاقة</string>
    <string name="tvName">TextView</string>
</resources>
