<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/pic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"

        android:layout_marginLeft="55dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/pic"
        android:onClick="buttonClicked"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/takephoto"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"

        android:layout_marginRight="55dp"
        android:contentDescription="@string/takephoto"
        android:onClick="buttonClicked"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="344dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:inputType=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:targetApi="o" />

    <Button
        android:id="@+id/save"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"

        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="buttonClicked"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <Button
        android:id="@+id/display"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="buttonClicked"
        android:text="@string/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save" />

    <Button
        android:id="@+id/btnrecord"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:background="@drawable/re"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takephoto" />

    <Button
        android:id="@+id/btnstop"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/st"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="146dp"
        android:layout_marginRight="146dp"
        android:text="@string/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="@string/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewImage" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="153dp"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="@string/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageViewImage"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:contentDescription="@string/imageViewImage"
        app:layout_constraintEnd_toStartOf="@+id/takephoto"
        app:layout_constraintStart_toEndOf="@+id/pic"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:src="@drawable/card"         />

</android.support.constraint.ConstraintLayout>
